# ember-engine

./: CMakeLists.txt  README.md  main.cpp
Display/: Window.cpp  Window.h
Graphical/: Renderer.cpp
Math/: Math.h  Vector2D.cpp  Vector2D.h  Vector4D.h
engine/Buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h
engine/Display/: Window.cpp  Window.h
engine/Graphical/: Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
engine/Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp
engine/Tools/: ImageLoader.h  helpers.cpp
engine/tools/: Interval.h  ToString.h  file.h  fps.h  helpers.h
files/: test.txt
files/shaders/: base.frag  base.vert
game/: Game.cpp  Game.h  game.cpp  game.h  readme.md
